# Dhara

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  backend-CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  frontend-CLAUDE.md  issue.md  rag-service-CLAUDE.md  update_frontend.md
.claude/: settings.local.json
backend/: Dockerfile  build.gradle  issue.md  settings.gradle
docs/: RAG_DATA_GUIDE.md  SETUP_GUIDE.md
frontend/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  (+1 more)
rag-service/: .env  Dockerfile  pyproject.toml
rag-service/app/: config.py  main.py
rag-service/app/models/: ask.py  common.py  search.py
rag-service/app/prompts/: case_comparison.py  case_summary.py  legal_qa.py
rag-service/app/providers/: __init__.py  base.py
rag-service/app/providers/embedding/: bgem3_provider.py  factory.py  ollama_provider.py  openai_provider.py
rag-service/app/providers/llm/: claude_provider.py  deepseek_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
rag-service/app/providers/reranker/: bge_reranker.py  cohere_reranker.py  factory.py  noop_reranker.py
rag-service/app/routers/: ask_router.py  embed_router.py  search_router.py
rag-service/app/services/: llm_router.py  rag_pipeline.py  search_service.py
rag-service/proto/: rag_service.proto
rag-service/scripts/: embed_all_documents.py  evaluate_rag.py
rag-service/tests/: conftest.py  test_factory.py  test_llm_router.py  test_rag_pipeline.py
rag-service/tests/providers/reranker/: test_noop.py
(+194 files in other folders)
